--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "@electron-forge/publisher-github": "^6.0.0-beta.54",
     "electron-squirrel-startup": "^1.0.0",
     "fluent-ffmpeg": "^2.1.2"
   },
