--- a/package.json
+++ b/package.json
@@ -43,6 +43,18 @@
           "name": "@electron-forge/maker-rpm",
           "config": {}
         }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "jcalado",
+              "name": "videoCheck",
+              "draft": true
+            }
+          }
+        }
       ]
     }
   },
